--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>
       // Redirect immediately to new domain
       (function () {
-        const domain = "javforyou.fun";
+        const domain = "https://javforyou.fun";
         // Get the current path and query string
         const path =
           window.location.pathname +
