--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Redirecting…</title>
+    <title>Jav4You</title>
     <script>
       // Redirect immediately to new domain
       (function () {
